# marimo.exp

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  intro.py  justfile  notebook.py  pyproject.toml
.github/workflows/: deploy.yml
assets/: world_population.csv
