[project]
name = "marimo-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "marimo>=0.14",
    "plotly>=6.2.0",
    "polars>=1.31.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.4"]
